--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section id="start-quiz">
         <h1>Bienvenue au Quizizi</h1>
         <div class="button-container">
-            <button>start</button>
+            <button id="start-button">start</button>
             <button>don't start</button>
         </div>
     </section>
